--- a/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
+++ b/themes/growth-sketch/layouts/clientele-beneficiaries/list.html
@@ -1,6 +1,58 @@
 {{ define "main" }}
 {{ if eq .Params.layout "industries" }}
 
+<section class="training-section py-6">
+    <div class="container text-center">
+        <!-- Title -->
+         <h4>Our Beneficiaries</h4>
+        <h2 class="section-title mb-5">Who We Empower with ESP?</h2>
+  
+        <div class="row justify-content-around">
+            <!-- Card 1: Business Organizations -->
+            <div class="col-md-3">
+                <div class="neumorphic-card">
+                    <img src="/images/Business-Organization.png" alt="Business-Organization img">
+                    <h4>Business Organizations</h4>
+                    <p>We unlock the creative potential of corporate teams, driving innovation and fostering growth.</p>
+            <a href="#" class="btn btn-secondary">Learn More</a>
+  
+                </div>
+            </div>
+            <!-- Card 2: Non-Profit Organizations -->
+            <div class="col-md-3">
+                <div class="neumorphic-card">
+                    <img src="/images/Non-Profit-Organizations.png" alt="Non-Profit-Organizations img">
+                    <h4>Non-Profit Organizations</h4>
+                    <p>We inspire passion in non-profits, helping them energize volunteers and synergize teams to drive social change.</p>
+            <a href="#" class="btn btn-secondary">Learn More</a>
+  
+                </div>
+            </div>
+            <!-- Card 3: Government Organizations -->
+            <div class="col-md-3">
+                <div class="neumorphic-card">
+                    <img src="/images/Government-Organizations.png" alt="Government-Organizations img">
+                    <h4>Government Organizations</h4>
+                    <p>We align government teams to work towards efficient, transparent, and good governance, fostering impactful public service in the process of nation-building.</p>
+            <a href="#" class="btn btn-secondary">Learn More</a>
+  
+                </div>
+            </div>
+            <!-- Card 4: Educational Institutions -->
+            <div class="col-md-3">
+                <div class="neumorphic-card">
+                    <img src="/images/Educational-Institutions.png" alt="Educational-Institutions img">
+                    <h4>Educational Institutions</h4>
+                    <p>We empower educators and students to innovate and collaborate, fostering growth-oriented learning in the journey towards academic excellence. Thus, ESPeople develop the next generation of youth for tomorrow's nation.</p>
+            <a href="#" class="btn btn-secondary">Learn More</a>
+  
+                </div>
+            </div>
+        </div>
+  
+    </div>
+  </section>
+  
 <section id="industries" class="industries-we-serve py-5">
     <!-- <div class="container"> -->
     <!-- Page Title -->
@@ -19,12 +71,12 @@
                     <p>We offer programs specifically designed to unlock the potential of businesses by energizing and
                         synergizing teams for growth and success. Our programs include:</p>
                     <ul class="industry-programs">
-                        <li><i class="fa fa-check"></i> People Developmental Learning (PDL)</li>
+                        <!-- <li><i class="fa fa-check"></i> People Developmental Learning (PDL)</li> -->
                         <li><i class="fa fa-check"></i> Executives Developmental Learning (EDL)</li>
                         <li><i class="fa fa-check"></i> Management Developmental Learning (MDL)</li>
                         <li><i class="fa fa-check"></i> Leadership Development Learning (LDL)</li>
                     </ul>
-                    <div class="stats mt-4">
+                    <div class="stats d-none mt-4">
                         <h4>Impact Stats</h4>
                         <p><i class="fa fa-users"></i> 500+ Businesses Trained</p>
                         <p><i class="fa fa-chart-line"></i> 85% Success Rate in Leadership Training</p>
@@ -54,7 +106,7 @@
                         <li><i class="fa fa-check"></i> Support for Internal Training Programs</li>
                         <li><i class="fa fa-check"></i> Capturing Innovative Practices</li>
                     </ul>
-                    <div class="stats mt-4">
+                    <div class="stats d-none mt-4">
                         <h4>Impact Stats</h4>
                         <p><i class="fa fa-hand-holding-heart"></i> 200+ Non-Profits Trained</p>
                         <p><i class="fa fa-handshake"></i> 90% Improved Operational Efficiency</p>
@@ -84,7 +136,7 @@
                         <li><i class="fa fa-check"></i> Faculty Co-facilitation</li>
                         <li><i class="fa fa-check"></i> Training Courseware Development (TCD)</li>
                     </ul>
-                    <div class="stats mt-4">
+                    <div class="stats d-none mt-4">
                         <h4>Impact Stats</h4>
                         <p><i class="fa fa-gavel"></i> 150+ Government Bodies Trained</p>
                         <p><i class="fa fa-globe"></i> 75% Increase in Operational Efficiency</p>
@@ -114,7 +166,7 @@
                         <li><i class="fa fa-check"></i> Training Facilitation in Major Indian Languages</li>
                         <li><i class="fa fa-check"></i> Capturing Innovative Practices</li>
                     </ul>
-                    <div class="stats mt-4">
+                    <div class="stats d-none mt-4">
                         <h4>Impact Stats</h4>
                         <p><i class="fa fa-book"></i> 300+ Educational Institutions Trained</p>
                         <p><i class="fa fa-graduation-cap"></i> 80% Improvement in Educator Efficiency</p>
