--- a/themes/growth-sketch/assets/scss/components/_buttons.scss
+++ b/themes/growth-sketch/assets/scss/components/_buttons.scss
@@ -37,7 +37,7 @@
 }
 
 // Outline Primary button
-.btn-outline-primary {
+.btn-primary-outline {
   background-color: transparent;
   color: $primary-clr;
   border-color: $primary-clr;
@@ -55,7 +55,7 @@
 }
 
 // Outline Secondary button
-.btn-outline-secondary {
+.btn-secondary-outline {
   background-color: transparent;
   color: $secondary-clr;
   border-color: transparent;
