--- a/themes/growth-sketch/layouts/_default/home.html
+++ b/themes/growth-sketch/layouts/_default/home.html
@@ -270,7 +270,7 @@
           <h3 class="industry-title">ESP Non-Profit</h3>
           <hr>
           <h4>Learning Solutions</h4>
-          <p>We work with non-profit organizations to enhance leadership, team management, and operational efficiency
+          <p><em>Our learning solutions are different, unique & transformative for non profits.</em> <br><br> Their service dream to beneficiaries is the epitome in our solutions. Their cause & crusade, high degree of resilience, constant challenging learning needs, endless passion to seek help, develop immunity in rejection environs, constantly networking for volunteers to support social cause etc,
           </p>
           <!-- <ul class="industry-programs">
                       <li><i class="fa fa-check"></i> Coaching and Mentoring</li>
