--- a/themes/growth-sketch/layouts/partials/head/js.html
+++ b/themes/growth-sketch/layouts/partials/head/js.html
@@ -1,4 +1,13 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<!-- <script src="https://cdn.jsdelivr.net/npm/aos@2.3.1/dist/aos.js"></script>
+<script>
+  document.addEventListener('DOMContentLoaded', function () {
+    AOS.init({
+      duration: 1200, // Set the duration for the animations
+    });
+  });
+</script> -->
+
 
 {{- with resources.Get "js/main.js" }}
   {{- if eq hugo.Environment "development" }}
