--- a/themes/growth-sketch/assets/scss/base/_reset.scss
+++ b/themes/growth-sketch/assets/scss/base/_reset.scss
@@ -10,6 +10,7 @@ body {
     overflow-x: hidden;
     // padding-top: $navbar-height;
     // scroll-padding: map-get($sizes, 600)
+    padding-top: 13vh;
 }
 
 h1 {
