--- a/themes/growth-sketch/assets/scss/pages/_industries.scss
+++ b/themes/growth-sketch/assets/scss/pages/_industries.scss
@@ -22,6 +22,7 @@
             li {
                 font-size: 1.1rem;
                 margin-bottom: 0.75rem;
+
                 i {
                     color: $primary-clr;
                     margin-right: 0.5rem;
@@ -31,6 +32,7 @@
 
         .stats {
             font-size: 1.1rem;
+
             i {
                 color: $primary-clr;
                 margin-right: 0.5rem;
@@ -38,7 +40,8 @@
         }
 
         .industry-icon {
-            // width: 80%;
+            width: 70%;
+            
             // max-width: 250px;
             margin-bottom: 2rem;
         }
@@ -95,6 +98,7 @@
             opacity: 0;
             transform: translateY(20px);
         }
+
         to {
             opacity: 1;
             transform: translateY(0);
@@ -106,6 +110,7 @@
             opacity: 0;
             transform: translateY(-20px);
         }
+
         to {
             opacity: 1;
             transform: translateY(0);
