--- a/themes/growth-sketch/layouts/partials/menu.html
+++ b/themes/growth-sketch/layouts/partials/menu.html
@@ -10,19 +10,18 @@ Renders a menu for the given menu ID.
 {{- $page := .page }}
 {{- $menuID := .menuID }}
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top p-0">
   <div class="container">
     <a class="navbar-brand p-0" href="/">
       <img src="/images/logo.png" alt="ESPeople logo" title="ESPeople logo">
-      <!-- <p>Logo URL: {{ .Site.Params.logo | absURL }}</p> -->
       <span class="font-weight-bold h4">ESPeople</span>
     </a>
-    <!-- <a class="navbar-brand" href="/">ESPeople</a> -->
 
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         {{- with index site.Menus $menuID }}
@@ -39,6 +38,14 @@ Renders a menu for the given menu ID.
   </div>
 </nav>
 
+<!-- Add this script at the end of your page or in a JS file -->
 <script>
-
+  document.addEventListener('click', function(event) {
+    var navbarToggler = document.querySelector('.navbar-toggler');
+    var navbarCollapse = document.querySelector('#navbarNav');
+    
+    if (navbarCollapse.classList.contains('show') && !navbarCollapse.contains(event.target) && !navbarToggler.contains(event.target)) {
+      navbarToggler.click(); // Closes the navbar if an outside click is detected
+    }
+  });
 </script>
